--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ version = "0.3-alpha"
 # - update the date in anisocado/version.py
 description = "Simple interface to the Pickles 1998 stellar spectra catalogue"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 license = {text = "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"}
 authors = [
     {name = "Kieran Leschinski", email="kieran.leschinski@unive.ac.at"},
@@ -24,10 +24,10 @@ classifiers=[
 dependencies = [
     # Try to keep the dependencies on lower versions that have a wheel
     # package on PyPI, for minimumdependencies.yml
-    "numpy>=1.18.0",
-    "astropy>=4.0",
-    "matplotlib>=3.2.0",
-    "synphot>=1.1.0",
+    "numpy>=1.26.3",
+    "astropy>=5.3.3",
+    "matplotlib>=3.7.2",
+    "synphot>=1.2.1",
 ]
 
 [project.optional-dependencies]
@@ -35,14 +35,14 @@ dev = [
     "scipy",
 ]
 test = [
-    "pytest>=5.0.0",
+    "pytest>=7.4.3",
     "pytest-cov",
 ]
 docs = [
-    "sphinx>=4.3.0",
+    "sphinx>=5.3.0",
     "sphinx-rtd-theme>=0.5.1",
     "sphinxcontrib-apidoc",
-    "numpydoc",
+    "numpydoc>=1.6.0",
 ]
 
 [project.urls]
