--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,19 +5,24 @@
 version: 2
 
 build:
-  os: ubuntu-20.04
+  os: "ubuntu-22.04"
   tools:
-    python: "3.9"
+    python: "3.11"
+  jobs:
+    post_create_environment:
+      # Install poetry
+      # https://python-poetry.org/docs/#installing-manually
+      - pip install poetry
+    post_install:
+      # Install dependencies with 'docs' dependency group
+      # https://python-poetry.org/docs/managing-dependencies/#dependency-groups
+      # VIRTUAL_ENV needs to be set manually for now.
+      # See https://github.com/readthedocs/readthedocs.org/pull/11152/
+      - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH poetry install --with docs
 
 sphinx:
   configuration: docs/source/conf.py
 
-python:
-  install:
-   - method: pip
-     path: .
-     extra_requirements:
-       - docs
-
-# If using Sphinx, optionally build your docs in additional formats such as PDF
-# formats: []     # ignore htmlzip. html is always run
+formats:
+  - pdf
+  - epub
