--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,16 +3,30 @@ name: Tests
 on:
   push:
     branches:
-      - master
-      - dev_master
+      - main
   pull_request:
     branches:
-      - master
-      - dev_master
+      - main
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
   call-tests:
-    uses: AstarVienna/DevOps/.github/workflows/tests.yml@master
+    name: Offline tests
+    uses: AstarVienna/DevOps/.github/workflows/tests.yml@main
+    with:
+      poetry: True
+    secrets: inherit
+
+  call-webtests:
+    name: Network tests
+    uses: AstarVienna/DevOps/.github/workflows/webtests.yml@main
+    with:
+      poetry: True
+    secrets: inherit
+
+  call-updated-tests:
+    name: Tests with updated dependencies
+    uses: AstarVienna/DevOps/.github/workflows/updated_tests.yml@main
+    secrets: inherit
