--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ documentation = "https://pyckles.readthedocs.io/"
 [tool.poetry.dependencies]
 python = "^3.9"
 astropy = "^5.3.4"
+pooch = "^1.8.2"
 
 synphot = { version = "^1.2.1", optional = true }
 
