--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "Pyckles"
-version = "0.3.0"
+version = "0.3.1a0"
 description = "Simple interface to the Pickles 1998 stellar spectra catalogue"
 readme = "README.md"
 license = "GPL-3.0-or-later"
