--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,56 +1,55 @@
-[tool.poetry]
+[project]
 name = "Pyckles"
 version = "0.4.2a0"
-description = "Simple interface to the Pickles 1998 stellar spectra catalogue"
+description = "Simple interface to the Pickles 1998 stellar spectra catalogue."
 readme = "README.md"
-license = "GPL-3.0-or-later"
-authors = ["Kieran Leschinski <kieran.leschinski@unive.ac.at>"]
+license = {text = "GPL-3.0-or-later"}
+authors = [
+    {name = "Kieran Leschinski", email = "kieran.leschinski@univie.ac.at"}
+]
 maintainers = [
-    "Kieran Leschinski <kieran.leschinski@unive.ac.at>",
-    "Hugo Buddelmeijer <hugo@buddelmeijer.nl>",
-    "Fabian Haberhauer <fabian.haberhauer@univie.ac.at>",
+    { name = "Kieran Leschinski", email = "kieran.leschinski@univie.ac.at" },
+    { name = "Hugo Buddelmeijer", email = "hugo@buddelmeijer.nl" },
+    { name = "Fabian Haberhauer", email = "fabian.haberhauer@univie.ac.at" },
 ]
 classifiers = [
     "Operating System :: OS Independent",
     "Intended Audience :: Science/Research",
     "Topic :: Scientific/Engineering :: Astronomy",
 ]
+keywords = [ "astronomy" ]
+requires-python = ">=3.10, <3.13"
+dependencies = [
+    "astropy (>=6.1.5,<7.0.0)",
+    "pooch (>=1.8.2,<2.0.0)",
+]
+
+[project.optional-dependencies]
+syn = [ "synphot>=1.5.0,<2.0.0" ]
+
+[project.urls]
 repository = "https://github.com/AstarVienna/Pyckles/"
 documentation = "https://pyckles.readthedocs.io/"
-
-
-[tool.poetry.dependencies]
-python = "^3.10"
-astropy = "^6.0.1"
-pooch = "^1.8.2"
-
-synphot = { version = "^1.4.0", optional = true }
+"Bug Tracker" = "https://github.com/AstarVienna/Pyckles/issues"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.5"
 pytest-cov = "^6.0.0"
-numpy = "^1.26.3"
+numpy = ">=1.26.4, <2.0.0"
 
 [tool.poetry.group.docs]
 optional = true
 
 [tool.poetry.group.docs.dependencies]
-sphinx = "^5.3.0"
+sphinx = ">=5.3, <8.0"
 sphinx-book-theme = "^1.1.0"
-sphinxcontrib-apidoc = "^0.4.0"
-numpy = "^1.26.3"
+sphinxcontrib-apidoc = ">=0.4, <0.6"
+numpy = ">=1.26.4, <2.0.0"
 numpydoc = "^1.6.0"
-matplotlib = "^3.8.2"
-
-[tool.poetry.urls]
-"Bug Tracker" = "https://github.com/AstarVienna/Pyckles/issues"
-
-[tool.poetry.extras]
-syn = ["synphot"]
-
+matplotlib = "^3.10.1"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 
