--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ optional = true
 sphinx = ">=5.3, <8.0"
 sphinx-book-theme = "^1.1.0"
 sphinxcontrib-apidoc = ">=0.4,<0.7"
-numpy = ">=1.26.4, <2.3.0"
+numpy = "^2.1.3"
 numpydoc = "^1.6.0"
 matplotlib = "^3.10.1"
 
