--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,13 @@ maintainers = [
 ]
 keywords = [ "astronomy" ]
 dynamic = [ "classifiers" ]
-requires-python = ">=3.10,<3.14"
+requires-python = ">=3.10,<3.15"
 dependencies = [
+    # SciPy is only an indirect dependency through synphot, but has limited
+    # wheels for Python versions, so needs to be specified explicitly.
+    "scipy (>=1.15.3,<1.16.0) ; python_version >= '3.10' and python_version < '3.11'",
+    "scipy (>=1.17.0,<1.18.0) ; python_version >= '3.11'",
+
     "astropy (>=6.1.7,<8.0.0)",
     "pooch (>=1.8.2,<2.0.0)",
 ]
@@ -42,13 +47,18 @@ pytest = "^9.0.2"
 pytest-cov = "^7.0.0"
 numpy = ">=1.26.4, <2.3.0"
 
+
 [tool.poetry.group.docs]
 optional = true
 
 [tool.poetry.group.docs.dependencies]
-sphinx = ">=5.3, <8.0"
+sphinx = "^8.1.3"
 sphinx-book-theme = "^1.1.4"
-sphinxcontrib-apidoc = ">=0.4,<0.7"
+sphinx-copybutton = ">=0.5.2,<1.0"
+sphinxcontrib-apidoc = ">=0.6.0,<1.0"
+sphinxcontrib-mermaid = "^2.0"
+myst-nb = "^1.3.0"
+sphinx-issues = "^5.0.1"
 numpy = "^2.1.3"
 numpydoc = "^1.10.0"
 matplotlib = "^3.10.8"
