--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "Pyckles"
-version = "0.5.1a1"
+version = "0.6.0b0"
 description = "Simple interface to the Pickles 1998 stellar spectra catalogue."
 readme = "README.md"
 license = {text = "GPL-3.0-or-later"}
