--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,13 +16,16 @@ keywords = [ "astronomy" ]
 dynamic = [ "classifiers" ]
 requires-python = ">=3.10,<3.15"
 dependencies = [
+    # NumPy is only an indirect dependency, but need to pin it anyway to avoid version conflicts
+    "numpy (>=1.26.4,<2.3.0) ; python_version >= '3.10' and python_version < '3.13'",
+    "numpy (>=2.3.5,<3.0.0) ; python_version >= '3.13'",
     # SciPy is only an indirect dependency through synphot, but has limited
     # wheels for Python versions, so needs to be specified explicitly.
     "scipy (>=1.15.3,<1.16.0) ; python_version >= '3.10' and python_version < '3.11'",
     "scipy (>=1.17.0,<1.18.0) ; python_version >= '3.11'",
 
     "astropy (>=6.1.7,<8.0.0)",
-    "pooch (>=1.8.2,<2.0.0)",
+    "pooch (>=1.9.0,<2.0.0)",
 ]
 
 [project.optional-dependencies]
@@ -45,7 +48,7 @@ classifiers = [
 [tool.poetry.group.test.dependencies]
 pytest = "^9.0.2"
 pytest-cov = "^7.0.0"
-numpy = ">=1.26.4, <2.3.0"
+numpy = ">=1.26.4, <3.0.0"
 
 
 [tool.poetry.group.docs]
